fix answers options and update logical jumps on add step

--- a/src/routes/toolEditor/ToolEditor.css
+++ b/src/routes/toolEditor/ToolEditor.css
@@ -55,6 +55,8 @@
   position: relative;
   top: -4px;
   margin-bottom: -1px;
+  display: flex;
+  justify-content: space-between;
 }
 .answer:hover .answerOptionCol,
 .answerOptionCol.isVisible {
@@ -79,7 +81,7 @@
 
 .answerOptionField {
   transition: width 0.5s;
-  width: 60px;
+  width: 0;
   height: 10px;
   font-size: 10px;
   border: none;
